[main-private] tests updated